Allow multiple tools/bait